Fixed name & email input rounding on mobile

--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -8,6 +8,7 @@
         padding: 0 1rem;
         border: none;
         margin: 1.5rem 0;
+        border-radius: 0;
     }
     &__textarea-wrapper {
         width: 100%;
@@ -18,11 +19,13 @@
         margin: 1.5rem 0;
         border: none;
         width: 100%;
+        border-radius: 0;
     }
     &__submit {
         width: 50%;
         cursor: pointer;
         margin-top: 1.5rem;
+        border-radius: 0;
     }
     &__input,
     &__textarea {
